<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/usrname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="179dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/username"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="189dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/password"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView2"
            android:layout_marginTop="97dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_alignLeft="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="17dp"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            android:layout_marginLeft="19dp"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="114dp"
            android:text="@string/signin" />

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="43dp"
            android:text="@string/signup" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>